welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.EST);
               ^DwarfCode:6: error: not found: value Direction
      setDirection(Direction.OUEST);
                   ^DwarfCode:12: error: not found: value Direction
  		setDirection(Direction.EST);
                             ^